--- a/koallab/package.json
+++ b/koallab/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
+    "@heroicons/react": "^2.0.17",
     "@mui/material": "^5.12.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "simplebar-react": "^3.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
