--- a/koallab/package.json
+++ b/koallab/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.12.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.1",
     "simplebar-react": "^3.2.4"
   },
   "devDependencies": {
