--- a/koallab/package.json
+++ b/koallab/package.json
@@ -14,9 +14,13 @@
     "@emotion/styled": "^11.10.8",
     "@heroicons/react": "^2.0.17",
     "@mui/material": "^5.12.3",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
+    "redux": "^4.2.1",
     "simplebar-react": "^3.2.4"
   },
   "devDependencies": {
