--- a/koallab/package.json
+++ b/koallab/package.json
@@ -20,6 +20,9 @@
     "simplebar-react": "^3.2.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.3.1",
@@ -27,6 +30,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "vite": "^4.3.2"
+    "jsdom": "^22.0.0",
+    "vite": "^4.3.2",
+    "vitest": "^0.31.0"
   }
 }
