--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^0.29.0",
     "jquery": "^3.6.4",
     "mongoose": "^7.0.3",
     "morgan": "~1.9.1"
