--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "production": "cross-env NODE_ENV=production node ./bin/www"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
@@ -16,5 +17,8 @@
     "jquery": "^3.6.4",
     "mongoose": "^7.0.3",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
